target: fix NULL pointer dereference bug alloc_page() fails to get memory